// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APP TEST renders learn react link 1`] = `
<input
  placeholder="input vfalue..."
  type="text"
/>
`;

exports[`renders learn react link 1`] = `
<input
  placeholder="input value..."
  type="text"
/>
`;
